# calculator-api

./: app.py  pyproject.toml
src/: __init__.py  myfunc.py
