[tool.poetry]
name = "calculator-api"
version = "0.1.0"
description = ""
authors = ["Mkamono <chengyaye31@gmail.com>"]
readme = "README.md"
packages = [{include = "calculator_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pint = "^0.20.1"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
